# WIDEDIST

./: .gitignore  CMakeLists.txt  installer.iss
.github/workflows/: build_windows.yml
Design/: index.html
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
